--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,7 +15,13 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+          
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Build and test
+        run: npm run build
+        
+      - run: npm publish ./sample-packages/npm/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
