--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
         
       - name: Build and test
-        run: npm run build
+        run: npm --prefix=./sample-packages/npm/ run build
         
       - run: npm publish ./sample-packages/npm/
         env:
