--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -32,6 +32,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: sample-packages/dotnet/GitHubTest/nupkg/*.nupkg
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.NUGET_PACKAGE_TOKEN }}
         name: Release ${{ github.sha }}
         tag_name: ${{ github.sha }}
